# cpp_text_client_python_gcp_server

./: .gitignore  CMakeLists.txt  README.md  client.cpp  server.py
